@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.3.0
 ----------------------------------------------------------------------
-   9 Enhancements
+  10 Enhancements
    6 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
@@ -20,6 +20,9 @@
 
   - Add .xliff extension to the XLIFF filter
   http://sourceforge.net/support/tracker.php?aid=3339675
+
+  - Enable no prefix for fuzzy matches
+  http://sourceforge.net/support/tracker.php?aid=1616157
 
   Other enhancements:
 
